--- a/style.css
+++ b/style.css
@@ -1,24 +1,94 @@
-body{
-    background-color: #B3E7FA;
-}
-h1{text-align: center;
-    font-size: 50px;
-    
-}
-.hydro{
-    background-color: #ccf7f7;
+* {
+    margin: 0;
+    padding: 0;
+    color: black
 }
 
-nav.menu{
-    display: contents;
+header {
+    display: grid;
+    grid-template-columns: 70px 1fr;
+    background-color: rgb(193, 240, 236);
+    top: 0;
 }
-.corps{
-    margin: 50px;
+
+nav ul {
+    display: grid;
+    grid-template-columns: 0.6fr 0.6fr 0.6fr 0.6fr;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-top: 20px;
+
+
+}
+
+nav a {
+    text-decoration: none;
+    justify-content: center;
+    font-weight: bold;
+
+}
+
+nav a:hover {
+    text-decoration: underline;
+    color: blue
+}
+
+body {
+    background-color: #B3E7FA;
+}
+
+h1 {
+    color: black;
+    text-align: center;
+    font-size: 75px;
+    padding: 10px;
+}
+
+p {
+    color: black;
+    font-size: 25px;
+    text-align: center;
+    margin: 20px;
+}
+
+button {
+    width: 150px;
+    height: 50px;
+    background-color: blue;
+    color: white;
+    border-radius: 15px;
+    display: block;
+    margin: auto;
+    font-size: 15px;
+    font-weight: bold;
+
+}
+
+button:hover {
+    background-color: red;
+
+
+}
+
+main {
+    background-color: rgb(255, 254, 253);
+    padding: 25px;
+}
+
+.corps {
+    border-image: 25px;
+    display: flexbox;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 60px;
     padding: 50px;
 }
-a{
-    font-size: 25px;
-    padding: 85px;
-    color: black;
-    font-weight: bold;
+
+footer {
+    background-color: rgb(193, 240, 236);
+    display: flex;
+    flex-direction: row;
+    grid-template-columns: 1px 1px;
 }
